优化：顶部透明、导航优化、服务流程精简、移动端优化、SEO标签

--- a/about.html
+++ b/about.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>关于我们 - 嘉孚堂</title>
     <meta name="description" content="关于嘉孚堂">
+    <meta property="og:title" content="关于我们 - 嘉孚堂">
+    <meta property="og:description" content="关于嘉孚堂">
+    <meta property="og:image" content="https://jiafutang.pages.dev/images/logo.png">
+    <meta property="og:type" content="website">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="apple-touch-icon" href="favicon.ico">
@@ -12,7 +16,7 @@
 </head>
 <body>
     <!-- Header -->
-    <header class="header scrolled" id="header">
+    <header class="header" id="header">
         <div class="container header-inner">
             <a href="index.html" class="logo">
                 <img src="images/logo.png" alt="嘉孚堂" class="logo-img">
@@ -190,7 +194,8 @@
         </div>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="js/data.js?v=20260218"></script>
+    <script src="js/main.js?v=20260218"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const hamburger = document.getElementById('hamburger');
