--- a/consignment.html
+++ b/consignment.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!-- Header -->
-    <header class="header scrolled" id="header">
+    <header class="header" id="header">
         <div class="container header-inner">
             <a href="index.html" class="logo">
                 <img src="images/logo.png" alt="嘉孚堂" class="logo-img">
@@ -168,7 +168,8 @@
         </div>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="js/data.js?v=20260218"></script>
+    <script src="js/main.js?v=20260218"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const hamburger = document.getElementById('hamburger');
