--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>嘉孚堂 - 让珍宝遇见知己</title>
     <meta name="description" content="嘉孚堂官网，专业的艺术品收藏与征集服务平台">
+    <meta property="og:title" content="嘉孚堂 - 让珍宝遇见知己">
+    <meta property="og:description" content="嘉孚堂官网，专业的艺术品收藏与征集服务平台">
+    <meta property="og:image" content="https://jiafutang.pages.dev/images/logo.png">
+    <meta property="og:type" content="website">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="apple-touch-icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;500;600&family=Noto+Serif+SC:wght@600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;1,300;1,400&family=Montserrat:wght@400;500;600&family=Noto+Sans+SC:wght@400;500&family=Noto+Serif+SC:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Header -->
@@ -114,37 +118,9 @@
     <section class="section process-section">
         <div class="container">
             <h2 class="section-title">服务流程</h2>
-            <div class="process-steps">
-                <div class="process-step">
-                    <div class="step-number">1</div>
-                    <h3 class="step-title">提交藏品</h3>
-                    <p class="step-desc">联系我们的工作人员，提交藏品基本信息</p>
-                </div>
-                <div class="process-arrow">→</div>
-                <div class="process-step">
-                    <div class="step-number">2</div>
-                    <h3 class="step-title">初步评估</h3>
-                    <p class="step-desc">专家团队对藏品进行初步价值评估</p>
-                </div>
-                <div class="process-arrow">→</div>
-                <div class="process-step">
-                    <div class="step-number">3</div>
-                    <h3 class="step-title">专家鉴定</h3>
-                    <p class="step-desc">专业鉴定机构进行真伪及年代鉴定</p>
-                </div>
-                <div class="process-arrow">→</div>
-                <div class="process-step">
-                    <div class="step-number">4</div>
-                    <h3 class="step-title">签订协议</h3>
-                    <p class="step-desc">确认合作意向，签订委托代理协议</p>
-                </div>
-                <div class="process-arrow">→</div>
-                <div class="process-step">
-                    <div class="step-number">5</div>
-                    <h3 class="step-title">宣传展示</h3>
-                    <p class="step-desc">全方位宣传推广，精准对接潜在藏家</p>
-                </div>
-            </div>
+            <p style="text-align:center;font-size:14px;color:#888;margin-bottom:10px;letter-spacing:1px;">
+                提交藏品 → 初步评估 → 专家鉴定 → 签订协议 → 宣传展示
+            </p>
             <div class="process-cta">
                 <a href="submission.html" class="btn btn-primary">立即提交藏品</a>
             </div>
@@ -215,6 +191,8 @@
                     <a href="collections.html">藏品展示</a>
                     <a href="consignment.html">征集流程</a>
                     <a href="about.html">关于我们</a>
+                    <a href="privacy.html">隐私条款</a>
+                    <a href="disclaimer.html">免责声明</a>
                 </div>
             </div>
             <div class="footer-bottom">
@@ -224,6 +202,5 @@
     </footer>
 
     <script src="js/data.js"></script>
-    <script src="js/main.js"></script>
 </body>
 </html>
