--- a/news-detail.html
+++ b/news-detail.html
@@ -86,8 +86,8 @@
         </div>
     </footer>
 
-    <script src="js/data.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/data.js?v=20260218"></script>
+    <script src="js/main.js?v=20260218"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             initHeader();
