--- a/about.html
+++ b/about.html
@@ -56,6 +56,94 @@
         </div>
     </section>
 
+    <!-- 团队展示轮播 -->
+    <section class="section" style="background:#f8f8f8;padding:60px 0;">
+        <div class="container">
+            <h2 style="font-size:28px;text-align:center;margin-bottom:40px;color:#333;">团队展示</h2>
+            <div class="about-slider" id="aboutSlider" style="position:relative;max-width:900px;margin:0 auto;overflow:hidden;border-radius:12px;box-shadow:0 10px 40px rgba(0,0,0,0.15);">
+                <div class="about-slides" style="display:flex;transition:transform 0.5s ease;">
+                    <div class="about-slide" style="min-width:100%;position:relative;">
+                        <img src="images/93b7e4a48f7c6a9292fd87dadd230e35.jpg" alt="团队展示1" style="width:100%;height:500px;object-fit:cover;display:block;">
+                    </div>
+                    <div class="about-slide" style="min-width:100%;position:relative;">
+                        <img src="images/a2deea44d8ea4b10069849fa538c6c21.jpg" alt="团队展示2" style="width:100%;height:500px;object-fit:cover;display:block;">
+                    </div>
+                    <div class="about-slide" style="min-width:100%;position:relative;">
+                        <img src="images/a39443981289ca6b3aab2b564c846ec6.jpg" alt="团队展示3" style="width:100%;height:500px;object-fit:cover;display:block;">
+                    </div>
+                    <div class="about-slide" style="min-width:100%;position:relative;">
+                        <img src="images/fd69752fc6072294a195dfd6e10e0619.jpg" alt="团队展示4" style="width:100%;height:500px;object-fit:cover;display:block;">
+                    </div>
+                    <div class="about-slide" style="min-width:100%;position:relative;">
+                        <img src="images/2a34b00000a3556cb0ee23f39c38d936.jpg" alt="团队展示5" style="width:100%;height:500px;object-fit:cover;display:block;">
+                    </div>
+                    <div class="about-slide" style="min-width:100%;position:relative;">
+                        <img src="images/5d45e3acfa9cc0fab712ab4ae019e553.jpg" alt="团队展示6" style="width:100%;height:500px;object-fit:cover;display:block;">
+                    </div>
+                </div>
+                <button class="about-prev" onclick="changeAboutSlide(-1)" style="position:absolute;top:50%;left:15px;transform:translateY(-50%);width:50px;height:50px;background:rgba(255,255,255,0.9);border:none;border-radius:50%;cursor:pointer;font-size:24px;color:#333;box-shadow:0 4px 15px rgba(0,0,0,0.2);transition:all 0.3s;z-index:10;">&#10094;</button>
+                <button class="about-next" onclick="changeAboutSlide(1)" style="position:absolute;top:50%;right:15px;transform:translateY(-50%);width:50px;height:50px;background:rgba(255,255,255,0.9);border:none;border-radius:50%;cursor:pointer;font-size:24px;color:#333;box-shadow:0 4px 15px rgba(0,0,0,0.2);transition:all 0.3s;z-index:10;">&#10095;</button>
+                <div class="about-dots" style="position:absolute;bottom:20px;left:50%;transform:translateX(-50%);display:flex;gap:10px;z-index:10;">
+                    <span class="about-dot active" onclick="goToAboutSlide(0)" style="width:12px;height:12px;background:#fff;border-radius:50%;cursor:pointer;box-shadow:0 2px 5px rgba(0,0,0,0.3);"></span>
+                    <span class="about-dot" onclick="goToAboutSlide(1)" style="width:12px;height:12px;background:rgba(255,255,255,0.6);border-radius:50%;cursor:pointer;box-shadow:0 2px 5px rgba(0,0,0,0.3);"></span>
+                    <span class="about-dot" onclick="goToAboutSlide(2)" style="width:12px;height:12px;background:rgba(255,255,255,0.6);border-radius:50%;cursor:pointer;box-shadow:0 2px 5px rgba(0,0,0,0.3);"></span>
+                    <span class="about-dot" onclick="goToAboutSlide(3)" style="width:12px;height:12px;background:rgba(255,255,255,0.6);border-radius:50%;cursor:pointer;box-shadow:0 2px 5px rgba(0,0,0,0.3);"></span>
+                    <span class="about-dot" onclick="goToAboutSlide(4)" style="width:12px;height:12px;background:rgba(255,255,255,0.6);border-radius:50%;cursor:pointer;box-shadow:0 2px 5px rgba(0,0,0,0.3);"></span>
+                    <span class="about-dot" onclick="goToAboutSlide(5)" style="width:12px;height:12px;background:rgba(255,255,255,0.6);border-radius:50%;cursor:pointer;box-shadow:0 2px 5px rgba(0,0,0,0.3);"></span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <style>
+        @media (max-width:768px) {
+            .about-slide img { height:280px !important; }
+            .about-prev, .about-next { width:40px !important;height:40px !important;font-size:18px !important; }
+            .about-prev { left:8px !important; }
+            .about-next { right:8px !important; }
+            .about-dots { bottom:12px !important; }
+            .about-dot { width:10px !important;height:10px !important; }
+        }
+    </style>
+
+    <script>
+        let aboutCurrentSlide = 0;
+        const aboutSlides = document.querySelectorAll('.about-slide');
+        const aboutTotalSlides = aboutSlides.length;
+        let aboutAutoplayInterval;
+
+        function updateAboutSlider() {
+            const slidesContainer = document.querySelector('.about-slides');
+            slidesContainer.style.transform = 'translateX(-' + (aboutCurrentSlide * 100) + '%)';
+            document.querySelectorAll('.about-dot').forEach((dot, index) => {
+                dot.classList.toggle('active', index === aboutCurrentSlide);
+                dot.style.background = index === aboutCurrentSlide ? '#fff' : 'rgba(255,255,255,0.6)';
+            });
+        }
+
+        function changeAboutSlide(direction) {
+            aboutCurrentSlide = (aboutCurrentSlide + direction + aboutTotalSlides) % aboutTotalSlides;
+            updateAboutSlider();
+        }
+
+        function goToAboutSlide(index) {
+            aboutCurrentSlide = index;
+            updateAboutSlider();
+            resetAboutAutoplay();
+        }
+
+        function startAboutAutoplay() {
+            aboutAutoplayInterval = setInterval(() => changeAboutSlide(1), 4000);
+        }
+
+        function resetAboutAutoplay() {
+            clearInterval(aboutAutoplayInterval);
+            startAboutAutoplay();
+        }
+
+        startAboutAutoplay();
+    </script>
+
     <!-- Contact Section -->
     <section class="section" style="background:#fafafa;">
         <div class="container">
