关于我们：团队展示改为公司荣誉

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
     <!-- 团队展示轮播 -->
     <section class="section" style="background:#f8f8f8;padding:60px 0;">
         <div class="container">
-            <h2 style="font-size:28px;text-align:center;margin-bottom:40px;color:#333;">团队展示</h2>
+            <h2 style="font-size:28px;text-align:center;margin-bottom:40px;color:#333;">公司荣誉</h2>
             <div class="about-slider" id="aboutSlider" style="position:relative;max-width:900px;margin:0 auto;overflow:hidden;border-radius:12px;box-shadow:0 10px 40px rgba(0,0,0,0.15);">
                 <div class="about-slides" style="display:flex;transition:transform 0.5s ease;">
                     <div class="about-slide" style="min-width:100%;position:relative;">
