修复提交记录后台读取key

--- a/admin/pages/submissions.html
+++ b/admin/pages/submissions.html
@@ -194,7 +194,7 @@
     </div>
 
     <script>
-    const STORAGE_KEY = 'jiafu_submissions';
+    const STORAGE_KEY = 'jiafutang_submissions';
     let submissions = [];
     let currentPage = 1;
     const pageSize = 10;
